crates/swc_ecma_parser/tests/test262-error-references/fail/d46aee08cc49f6d1.module.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/d46aee08cc49f6d1.module.js:1:7
  |
1 | export
  |       ^

